--- a/rode/package.json
+++ b/rode/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.1.0",
     "@material-ui/core": "^3.3.2",
     "@svgr/webpack": "2.4.1",
+    "autoprefixer": "^9.3.1",
     "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
@@ -17,6 +18,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
     "css-loader": "1.0.0",
+    "cssnano": "^4.1.7",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "5.6.0",
@@ -35,13 +37,22 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "0.4.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
+    "postcss-aspect-ratio-mini": "0.0.2",
+    "postcss-cssnext": "^3.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.0.6",
+    "postcss-px-to-viewport": "0.0.3",
     "postcss-safe-parser": "4.0.1",
+    "postcss-url": "^8.0.0",
+    "postcss-viewport-units": "^0.1.6",
+    "postcss-write-svg": "^3.0.1",
     "react": "^16.6.0",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
@@ -57,6 +68,7 @@
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
+    "viewport-units-buggyfill": "^0.6.2",
     "webpack": "4.19.1",
     "webpack-dev-server": "3.1.9",
     "webpack-manifest-plugin": "2.0.4",
