--- a/rode/package.json
+++ b/rode/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.1.0",
     "@material-ui/core": "^3.3.2",
+    "@material-ui/icons": "^3.0.1",
     "@svgr/webpack": "2.4.1",
     "autoprefixer": "^9.3.1",
     "axios": "^0.18.0",
