--- a/rode/package.json
+++ b/rode/package.json
@@ -54,6 +54,7 @@
     "postcss-url": "^8.0.0",
     "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
+    "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
