--- a/rode/package.json
+++ b/rode/package.json
@@ -62,6 +62,7 @@
     "react-loadable": "^5.5.0",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.5.0",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2",
     "reselect": "^4.0.0",
